...
import UIKit
import Combine

final class listCharactersViewController: UIViewController {
    
    // MARK: - UI
    lazy var charactersTable: UITableView = {
        let tableView = UITableView()
        tableView.accessibilityIdentifier = "charactersTable"
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 160
        tableView.prefetchDataSource = self
        return tableView
...
